--- a/client/src/component/Blogpages/Blogdetail.css
+++ b/client/src/component/Blogpages/Blogdetail.css
@@ -7,7 +7,7 @@ width: 100%;
 .blog-main h2,h1{
     font-family: "Montserrat", Sans-serif;
 }
-.card-text{
+.blogtop{
     padding-top: 120px;
 }
 .blog-main p{
