--- a/client/src/component/menu/Footer.css
+++ b/client/src/component/menu/Footer.css
@@ -26,6 +26,9 @@
 #footer-section ul.footerlist {
     padding: 0;
 }
+#footer-section ul.footerlist li{
+    list-style: none;
+}
 #footer-section ul.footerlist li a {
     font-size: 14px;
     font-weight: 300;
