--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -6,10 +6,6 @@ section#home-banner {
 .home-alin {
     /* align-items: center; */
 }
-
-input[type=email]:focus{
-    outline: .5px solid rgba(0, 0, 0, 0.11);
-  }
 section#home-banner .container {
     max-width: 1140px;
     margin: auto;
@@ -48,27 +44,25 @@ section#home-banner .container {
 }
 
 button.know-btn {
-    border: 2.5px solid #4af8d5;
+    border: 2px solid #4af8d5;
     font-size: 14px;
-    line-height: 12px;
-    padding: 13px 25px;
-    border-radius:7px;
+    line-height: 14px;
+    padding: 14px 25px;
+    border-radius: 5px;
     background-color: transparent;
-    color:#4af8d5;
-    font-weight: 500;
 }
 .know-btn a {
     color: #4af8d5;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
 }
 .bannerbtn {
-    padding-top: 10px;
+    padding-top: 20px;
 }
-/* .bannerbtn:hover button.know-btn{
+.bannerbtn:hover button.know-btn{
     background-color: #0F71F2;
     border: 2px solid #0F71F2;
-} */
+}
 .bannerbtn:hover .know-btn a {
     color: #fff;
 }
@@ -256,16 +250,15 @@ font-family: Arial , sans-serif;
     line-height: 24px;
 
 }
-#Investing-sec .Invest-btn  button {
+#Investing-sec .Invest-btn button {
     border: 1px solid #019AFF;
     background: #019AFF;
     font-size: 18px;
     line-height: 30px;
     border-radius: 27px;
     padding: 8px 25px;
-    color: #fff;
 }
-#Investing-sec .Invest-btn a{
+#Investing-sec .Invest-btn button a {
     font-size: 16px;
     text-decoration: none;
     border-style: solid;
@@ -364,7 +357,7 @@ button.Blog-btn a {
     padding: 80px 0px 0px 0px;
     max-width: 1100px;
     margin: auto;
-    /* margin-bottom: -180px; */
+    margin-bottom: 0px;
 }
 .top-story-title h2 {
     text-align: center;
@@ -625,6 +618,7 @@ font-family: 'Arial Bold', sans-serif;
     grid-gap: 30px;
     max-width: 992px;
     margin: auto;
+    height: 681px;
 }
 .topNewsdata .NewsImg2 img {
     width: 100%;
@@ -722,27 +716,17 @@ font-family: 'Arial Bold', sans-serif;
 }
 .topNewsdata a:nth-child(9) {
     margin-top: -190px;
-    width: 49%;
-    position: relative;
-    left: 109%;
 }
 .topNewsdata a:nth-child(8) {
     background-color: gray;
-    display: none;
+    visibility: hidden;
 }
 .topNewsdata a{
     display:none;
 }
-.view-btn button:hover{
-    color: #0693e3;
-    border: 2px solid #0693e3;
-}
-
-.hoverclass:hover{
-    color: #0693e3 !important;
-    /* color: black; */
-    border: 2px solid #0693e3 !important;
-}
+/* .form_bg::selection{
+    background-color: white !important;
+} */
 /* top news css end */
 
 /* responsive */
@@ -999,6 +983,8 @@ section#New-section {
 }
 .topNewsdata {
     grid-template-columns: repeat(1,1fr);
+    height: auto;
+    padding-bottom: 10px;
 }
 .topNewsdata a:nth-child(5) img {
     float: left;
@@ -1013,6 +999,7 @@ section#New-section {
 }
 .topNewsdata a:nth-child(2) .NewsImg2 img {
     max-width: 185px;
+    width: 100%;
     height: 140px;
     object-fit: cover;
 }
