--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -323,8 +323,7 @@ button.view-btn {
 .blog_item1 {
     background-color: #FFFFFF;
     border-radius: 0px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    /* padding-bottom: 24px; */
     box-shadow: 0 0 10px 0 rgb(0 0 0 / 15%);
 }
 .blod-des {
