--- a/client/src/component/Learn.css
+++ b/client/src/component/Learn.css
@@ -55,6 +55,11 @@ section#LearnAbout-sec {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #F3F0E6;
+    max-height: 578px;
+}
+.learnbtn{
+    display: flex;
+    justify-content: center;
 }
 
 .learnabout {
@@ -118,6 +123,10 @@ section#investing-learn {
 }
 .learninvestimg img {
     border-radius: 0px 10px 10px 0px;
+}
+.iframeclass{
+   height: 400px;
+   width: 100%;
 }
 button.neain-invst {
     background-color: transparent;
