--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -45,10 +45,12 @@ section#home-banner .container {
 
 button.know-btn {
     border: 2px solid #4af8d5;
+    color: #4af8d5;
     font-size: 14px;
     line-height: 14px;
-    padding: 14px 25px;
+    padding: 12px 27px;
     border-radius: 5px;
+    font-weight: 500;
     background-color: transparent;
 }
 .know-btn a {
@@ -331,6 +333,7 @@ button.view-btn {
 }
 .blogImg img {
     width: 100%;
+    border-radius: 6px;
 }
 .blog-Ct h3 {
     color: #1F286F;
