--- a/client/src/component/menu/Footer.css
+++ b/client/src/component/menu/Footer.css
@@ -65,6 +65,10 @@ img.downlod {
 ul.contlist {
     padding: 0px;
 }
+
+ul.contlist li{
+    list-style: none;
+}
 ul.contlist li a {
     text-decoration: none;
     color: #FFFFFFC9;
