--- a/client/src/component/News.css
+++ b/client/src/component/News.css
@@ -335,7 +335,10 @@ br {
     text-align: right;
 }
 .slide-btn{
-    text-align: left !important;
+    
+        display: flex;
+     justify-content: center;
+    
 }
 
 button.Newsbtn {
