--- a/client/src/component/styles.css
+++ b/client/src/component/styles.css
@@ -1,9 +1,12 @@
+
+
 .swiper {
   width: 100%;
   height: 100%;
 }
 
 .swiper-slide {
+  text-align: center;
   font-size: 18px;
   display: -webkit-box;
   display: -ms-flexbox;
