--- a/client/src/component/menu/Footer.css
+++ b/client/src/component/menu/Footer.css
@@ -14,7 +14,9 @@
 #footer-section .Footer-Alin {
     align-items: baseline;
     padding: 0px 10px 30px 10px;
-
+}
+.socillist a{
+    font-size: 18px;
 }
 #footer-section .footer-title h3 {
     color: #ffffff;
@@ -93,9 +95,7 @@ ul.socillist li {
     display: inline-block;
     padding: 10px 10px;
 }
-ul.socillist li a {
-    color: #fff;
-}
+
 .footer-copyright {
     padding-top: 30px;
     align-items: center;
