--- a/client/src/component/About.css
+++ b/client/src/component/About.css
@@ -154,6 +154,9 @@ section#Value-section {
     font-size: 30px;
     padding-bottom: 0px;
 }
+.Value-main {
+    grid-template-columns: repeat(2,1fr);
+}
 }
 
 
@@ -169,5 +172,11 @@ section#Value-section {
 #AbWho-section {
     padding: 30px 0px 0px 0px;
 }
-
+.Value-main {
+    grid-template-columns: repeat(1,1fr);
+    text-align: center;
+}
+.value-img {
+    text-align: center;
+}
 }
