--- a/client/src/component/styles.css
+++ b/client/src/component/styles.css
@@ -21,10 +21,9 @@
   -webkit-align-items: center;
   align-items: center;
 }
-
-/* .swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-} */
+ .swiper-slide img {
+  display: block !important;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
+} 
