--- a/client/src/component/Learn.css
+++ b/client/src/component/Learn.css
@@ -58,7 +58,7 @@
   }
 /* Learn About section start */
 section#LearnAbout-sec {
-    background-image: url(../component/Images/learn-banner-bg3.png);   
+    background-image: url(../component/Images/LEARN.webp);  
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
