--- a/client/src/component/Blog.css
+++ b/client/src/component/Blog.css
@@ -1,10 +1,13 @@
 /* blog banner start */
 #Blog-banner .banner-bg{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/blogimage.jpg);
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
+}
+.blogbg_a{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/bLOG111.webp) !important;
 }
 #Blog-banner .Banner-main {
     padding:165px 0px;
