--- a/client/src/component/Career.css
+++ b/client/src/component/Career.css
@@ -1,5 +1,5 @@
 #career-banner .banner-bg{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/career-page-banner-1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/Career.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
