--- a/client/src/component/Blogpages/Blogdetail.css
+++ b/client/src/component/Blogpages/Blogdetail.css
@@ -44,3 +44,36 @@ line-height: 1.5rem;
 .ckh_blog1 input{ 
 width: 20px;
 }
+button.comment_btn {
+    border: 2px solid #4af8d5;
+    color: #4af8d5;
+    background-color: #fff;
+}
+.comment_btn:hover{
+    background-color: #0F71F2 !important;
+    border: 2px solid #0F71F2 !important;
+}
+/* responsive */
+
+@media (max-width:992px) {
+    .container.blog-main h2 {
+        text-align: center;
+        font-size: 28px;
+        line-height: 34px;
+    }
+}
+
+@media (max-width:667px) {
+    .container.blog-main p img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    section.reply-blog p {
+        text-align: center;
+    }
+    .sub-btn {
+        text-align: center;
+        padding-top: 20px;
+    }
+}
