changes with bg and infinite loop

--- a/client/src/component/About.css
+++ b/client/src/component/About.css
@@ -4,7 +4,7 @@
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/about\ us.webp);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center center;
     width: 100%;
 }
 .Banner-main {
