--- a/client/src/component/Learn.css
+++ b/client/src/component/Learn.css
@@ -3,7 +3,7 @@
 
 
 #Learn-banner .banner-bg{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/learn-Banner.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/LEARN.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -58,12 +58,12 @@
   }
 /* Learn About section start */
 section#LearnAbout-sec {
-    background-image: url(../component/Images/LEARN.webp);  
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/LEARN.webp);   
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-color: #F3F0E6;
-    max-height: 578px;
+    max-height: 500px;
 }
 .learnbtn{
     display: flex;
