--- a/client/src/component/Career.css
+++ b/client/src/component/Career.css
@@ -26,6 +26,7 @@
     display:inline;
     border-radius:0;
     padding:13px;
+    margin-right: 20px;
 }
 
 .td-1{
@@ -36,12 +37,14 @@
     width: 16%;
 }
 
-.td-1 h4{
-    padding-right:5rem;
-    font-size: 18px;
-    color: #c36;
-    letter-spacing: .5px;
-    font-weight: 500;
+.td-1 h4 {
+    padding-right: 5rem;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    font-style: normal;
+    font-family: 'Arial Bold', sans-serif;
+    color: #1F286F;
 }
 .table-row{
 font-size: 14px;
@@ -59,7 +62,7 @@ color: grey;
     font-size: 12px;
 }
 .table-row td:last-child a{
-    color: #c36;
+    color: #1F286F;
     text-decoration: none;
 }
 .maintable{
@@ -96,15 +99,16 @@ color: grey;
         margin-top: 25px !important;
     }
 }
-@media (max-width:658px){
-    .form-select{
-        width:27%;
-        font-size:12px;
-        display:inline;
-        border-radius:0;
-        padding:5px;
+@media (max-width:667px){
+    .form-select {
+        width:100%;
+        font-size: 12px;
+        display: flex;
+        border-radius: 0;
+        padding: 5px;
+        margin-bottom: 10px;
     }
-    .maintable .td-1 h4 {
+    .maintable .td-1 h4 {   
         padding-right: 0px;
         font-size: 12px;
         line-height: 16px;
