--- a/client/src/component/News.css
+++ b/client/src/component/News.css
@@ -73,7 +73,7 @@ section#LetNews-section {
     font-size: 65px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #fff;
+    color: black;
     line-height: 76px;
 }
 
