--- a/client/src/component/About.css
+++ b/client/src/component/About.css
@@ -1,11 +1,12 @@
 
 /* new banner */
 .banner-bg{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../component/Images/about\ us.webp);
+    background-image: url(../component/Images/about\ us.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     width: 100%;
+    min-height: 85vh;
 }
 .Banner-main {
     padding:165px 0px;
@@ -16,7 +17,7 @@
     font-size: 65px;
     font-weight: 700;
     text-transform: uppercase;
-    color: #fff;
+    color: black;
     line-height: 76px;
 }
 br {
